@@ -5,6 +5,8 @@ DisplayName=Google Talk
 IconName = empathy-proto-google-talk
 ConfigurationUI = jabber
 Capabilities = chat-p2p, chat-room, chat-room-list, voice-p2p, split-account, supports-avatars, supports-alias
+SupportsInvisible = 0
+VCardField = X-Jabber
 DefaultAccountDomain = gmail.com
 Default-server = talk.google.com
 Default-port = 5223
@@ -12,4 +14,4 @@ Default-old-ssl = 1
 Default-fallback-conference-server = conference.jabber.org
 Default-randomize-resource = 1
 Default-ignore-ssl-errors = 1
-SupportsInvisible = 0
+
