@@ -7,3 +7,6 @@ ConfigurationUI = jabber
 Capabilities = chat-p2p, chat-room, chat-room-list, voice-p2p, split-account, registration-ui, supports-avatars, supports-alias
 DefaultAccountDomain = jabber.org
 SupportsInvisible = 0
+VCardField = X-Jabber
+VCardDefault = true
+
