@@ -6,3 +6,6 @@ IconName = empathy-proto-msn
 ConfigurationUI = msn
 SupportsInvisible = 1
 Capabilities = chat-p2p, split-account, supports-avatars, supports-alias
+VCardField = X-MSN
+VCardDefault = true
+
